--- a/team.html
+++ b/team.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="robots" content="noindex, nofollow" />
     <title>Team | sleak</title>
+    <link rel="canonical" href="https://sleak-mag.design/team" />
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
@@ -77,6 +77,10 @@
       href="./src/assets/icons/favicon-16x16.png"
     />
     <link rel="manifest" href="./src/assets/manifest.webmanifest" />
+    <meta
+      name="description"
+      content="Lerne Team sleak kennen, die Studierenden, die sleak konzipiert, verfasst und herausgegeben haben!"
+    />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="msapplication-TileColor" content="#e41a1f" />
     <meta
@@ -84,7 +88,23 @@
       content="./src/assets/icons/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#e41a1f" />
-
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https://sleak-mag.design/team" />
+    <meta property="og:title" content="Team | sleak" />
+    <meta
+      property="og:description"
+      content="Lerne Team sleak kennen – die Studierenden, die sleak konzipiert, verfasst und herausgegeben haben!"
+    />
+    <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
+    <script type="application/ld+json">
+      {
+        "@context": "http://www.schema.org",
+        "@type": "WebSite",
+        "name": "sleak",
+        "alternateName": "sleak - design magazine",
+        "url": "https://sleak-mag.design"
+      }
+    </script>
     <script src="./src/team.js" defer></script>
   </head>
 
@@ -94,6 +114,7 @@
         <button
           class="header__hamburger hamburger hamburger--spring js-hamburger"
           type="button"
+          aria-label="Menü schließen"
         >
           <span class="hamburger-box">
             <span class="hamburger-inner"></span>
@@ -133,6 +154,7 @@
         <header class="menu__header">
           <button
             class="header__hamburger hamburger hamburger--spring js-close-selection-menu"
+            aria-label="Übersicht schließen"
             type="button"
           >
             <span class="hamburger-box">
@@ -202,6 +224,7 @@
       <div class="header__inner">
         <button
           class="header__hamburger hamburger hamburger--spring js-hamburger"
+          aria-label="Menü öffnen"
           type="button"
         >
           <span class="hamburger-box">
@@ -220,7 +243,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Felix</h1
           >
         </header>
@@ -243,7 +266,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Michaela</h1
           >
         </header>
@@ -266,7 +289,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Viktoria</h1
           >
         </header>
@@ -288,7 +311,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Max</h1
           >
         </header>
@@ -311,7 +334,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Sevda</h1
           >
         </header>
@@ -336,7 +359,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Julien</h1
           >
         </header>
@@ -358,7 +381,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Jonas</h1
           >
         </header>
@@ -382,7 +405,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Marvin</h1
           >
         </header>
@@ -407,7 +430,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Lena</h1
           >
         </header>
@@ -429,7 +452,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Rieke</h1
           >
         </header>
@@ -454,7 +477,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Jennie</h1
           >
         </header>
@@ -480,7 +503,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Judith</h1
           >
         </header>
@@ -506,7 +529,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Lia</h1
           >
         </header>
@@ -530,7 +553,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Nadine</h1
           >
         </header>
@@ -554,7 +577,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Janina</h1
           >
         </header>
@@ -577,7 +600,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Axel</h1
           >
         </header>
@@ -601,7 +624,7 @@
             class="article__title article__title--subpage js-to-selection-menu"
             role="button"
             tabindex="1"
-            aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen."
+            aria-label="Name des Team-Mitglieds. Anklicken, um Übersicht zu öffnen."
             >Andreas</h1
           >
         </header>
