--- a/print.html
+++ b/print.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="robots" content="noindex, nofollow" />
     <title>Printausgabe | sleak</title>
+    <link rel="canonical" href="https://sleak-mag.design/print" />
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
@@ -77,6 +77,10 @@
       href="./src/assets/icons/favicon-16x16.png"
     />
     <link rel="manifest" href="./src/assets/manifest.webmanifest" />
+    <meta
+      name="description"
+      content="Entdecke die edle Printausgabe Design Magazins! sleak, zum Anfassen."
+    />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="msapplication-TileColor" content="#e41a1f" />
     <meta
@@ -84,7 +88,23 @@
       content="./src/assets/icons/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#e41a1f" />
-
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https://sleak-mag.design/print" />
+    <meta property="og:title" content="Printausgabe | sleak" />
+    <meta
+      property="og:description"
+      content="Entdecke die edle Printausgabe des Design Magazins! sleak, zum Anfassen."
+    />
+    <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
+    <script type="application/ld+json">
+      {
+        "@context": "http://www.schema.org",
+        "@type": "WebSite",
+        "name": "sleak",
+        "alternateName": "sleak - design magazine",
+        "url": "https://sleak-mag.design"
+      }
+    </script>
     <script src="./src/utils/appshell.js" defer></script>
   </head>
 
@@ -94,6 +114,7 @@
         <button
           class="header__hamburger hamburger hamburger--spring js-hamburger"
           type="button"
+          aria-label="Menü schließen"
         >
           <span class="hamburger-box">
             <span class="hamburger-inner"></span>
@@ -134,6 +155,7 @@
           <button
             class="header__hamburger hamburger hamburger--spring js-close-selection-menu"
             type="button"
+            aria-label="Übersicht schließen"
           >
             <span class="hamburger-box">
               <span class="hamburger-inner"></span>
@@ -156,6 +178,7 @@
         <button
           class="header__hamburger hamburger hamburger--spring js-hamburger"
           type="button"
+          aria-label="Menü öffnen"
         >
           <span class="hamburger-box">
             <span class="hamburger-inner"></span>
