fix: include all HTML even when using href without ext

--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
       }
     </script>
     <script src="./src/main.js" defer></script>
+
+    <!--
+      Hint für Parcel, damit wir bei <a> Links saubere URLs ohne Endung benutzen können
+    -->
+    <link rel="parcel-include" href="./team.html" />
+    <link rel="parcel-include" href="./print.html" />
+    <link rel="parcel-include" href="./rechtliches.html" />
   </head>
 
   <body class="empty">
