fix: use <a> tags as hints for parcel so HTML files aren't hashed

--- a/index.html
+++ b/index.html
@@ -106,13 +106,6 @@
       }
     </script>
     <script src="./src/main.js" defer></script>
-
-    <!--
-      Hint für Parcel, damit wir bei <a> Links saubere URLs ohne Endung benutzen können
-    -->
-    <link rel="parcel-include" href="./team.html" />
-    <link rel="parcel-include" href="./print.html" />
-    <link rel="parcel-include" href="./rechtliches.html" />
   </head>
 
   <body class="empty">
@@ -136,6 +129,13 @@
           </span>
         </button>
       </header>
+
+      <!--
+        Hints für Parcel, damit wir bei sichtbaren <a> Links saubere URLs ohne Endung benutzen können, Parcel die HTMLs aber trotzdem einbindet
+      -->
+      <a style="display:none;" href="./team.html"></a>
+      <a style="display:none;" href="./print.html"></a>
+      <a style="display:none;" href="./rechtliches.html"></a>
 
       <nav class="menu__nav">
         <ul class="menu__list">
