feat: SEO improvements

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -88,9 +88,10 @@
       content="./src/assets/icons/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#e41a1f" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://sleak-mag.design" />
-    <meta property="og:title" content="sleak - design magazine" />
+    <meta property="og:title" content="sleak – design magazine" />
     <meta
       property="og:description"
       content="Artikel rund um Design in Deutschland – für Design-Interessierte und Alle, die es noch werden wollen. Herausgegeben von Studierenden der HS Bremerhaven."
@@ -101,7 +102,7 @@
         "@context": "http://www.schema.org",
         "@type": "WebSite",
         "name": "sleak",
-        "alternateName": "sleak - design magazine",
+        "alternateName": "sleak – design magazine",
         "url": "https://sleak-mag.design"
       }
     </script>
