--- a/team.html
+++ b/team.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -88,7 +88,8 @@
       content="./src/assets/icons/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#e41a1f" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://sleak-mag.design/team" />
     <meta property="og:title" content="Team | sleak" />
     <meta
@@ -101,7 +102,7 @@
         "@context": "http://www.schema.org",
         "@type": "WebSite",
         "name": "sleak",
-        "alternateName": "sleak - design magazine",
+        "alternateName": "sleak – design magazine",
         "url": "https://sleak-mag.design"
       }
     </script>
