--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
       content="Artikel rund um Design in Deutschland – für Design-Interessierte und Alle, die es noch werden wollen. Herausgegeben von Studierenden der HS Bremerhaven."
     />
     <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
+    <meta property="og:image:width" content="1900" />
+    <meta property="og:image:height" content="1031" />
     <script type="application/ld+json">
       {
         "@context": "http://www.schema.org",
