--- a/print.html
+++ b/print.html
@@ -97,6 +97,8 @@
       content="Entdecke die edle Printausgabe des Design Magazins! sleak, zum Anfassen."
     />
     <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
+    <meta property="og:image:width" content="1900" />
+    <meta property="og:image:height" content="1031" />
     <script type="application/ld+json">
       {
         "@context": "http://www.schema.org",
