fix: try new lines in og:description

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <meta property="og:title" content="sleak – design magazine" />
     <meta
       property="og:description"
-      content="Artikel rund um Design in Deutschland – für Design-Interessierte und Alle, die es noch werden wollen. Herausgegeben von Studierenden der HS Bremerhaven."
+      content="Artikel rund um Design in Deutschland – für Design-Interessierte und Alle, die es noch werden wollen. \nHerausgegeben von Studierenden der HS Bremerhaven."
     />
     <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
     <meta property="og:image:width" content="1900" />
