--- a/print.html
+++ b/print.html
@@ -94,7 +94,7 @@
     <meta property="og:title" content="Printausgabe | sleak" />
     <meta
       property="og:description"
-      content="Entdecke die edle Printausgabe des Design Magazins! sleak, zum Anfassen."
+      content="Entdecke die edle Printausgabe des Design Magazins! \nsleak, zum Anfassen."
     />
     <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
     <meta property="og:image:width" content="1900" />
