--- a/team.html
+++ b/team.html
@@ -79,7 +79,7 @@
     <link rel="manifest" href="./src/assets/manifest.webmanifest" />
     <meta
       name="description"
-      content="Lerne Team sleak kennen, die Studierenden, die sleak konzipiert, verfasst und herausgegeben haben!"
+      content="Lerne Team sleak kennen! Wir sind die Studierenden, die sleak konzipiert, verfasst und herausgegeben haben!"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="msapplication-TileColor" content="#e41a1f" />
@@ -94,7 +94,7 @@
     <meta property="og:title" content="Team | sleak" />
     <meta
       property="og:description"
-      content="Lerne Team sleak kennen: \nDie Studierenden, die sleak konzipiert, verfasst und herausgegeben haben!"
+      content="Lerne Team sleak kennen! Wir sind die Studierenden, die sleak konzipiert, verfasst und herausgegeben haben!"
     />
     <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
     <meta property="og:image:width" content="1900" />
