fix: import styles as css, not from js
fixes issue where separate css files where created for each
js bundle that was importing them. now one stylesheet is shared

--- a/print.html
+++ b/print.html
@@ -108,6 +108,7 @@
         "url": "https://sleak-mag.design"
       }
     </script>
+    <link rel="stylesheet" href="./src/assets/styles/index.css" />
     <script src="./src/utils/appshell.js" defer></script>
   </head>
 
