fix: seo - update canonical url for imprint

--- a/rechtliches.html
+++ b/rechtliches.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Rechtliches | sleak</title>
-    <link rel="canonical" href="https://sleak-mag.design/" />
+    <link rel="canonical" href="https://sleak-mag.design/rechtliches" />
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
