--- a/404.html
+++ b/404.html
@@ -88,58 +88,7 @@
       content="./src/assets/icons/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#e41a1f" />
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Lato:400');
-
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        background: #e41a1f;
-        color: #fff;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        font-family: 'Lato', sans-serif;
-      }
-
-      svg {
-        width: 35%;
-        max-width: 200px;
-        min-width: 80px;
-        max-height: 100px;
-      }
-
-      h1 {
-        margin-top: 3rem;
-        font-weight: normal;
-      }
-
-      a {
-        color: currentColor;
-        text-align: center;
-      }
-
-      a:first-child {
-        width: 100%;
-      }
-
-      @media screen and (max-width: 500px) {
-        h1 {
-          font-size: 1.5rem;
-        }
-      }
-
-      @media screen and (max-width: 350px) {
-        h1 {
-          font-size: 1.2rem;
-          margin-top: 2rem;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="./src/assets/styles/404.css" />
   </head>
 
   <body>
