fix: ensure appshell is split into separate bundle

--- a/rechtliches.html
+++ b/rechtliches.html
@@ -109,7 +109,7 @@
       }
     </script>
     <link rel="stylesheet" href="./src/assets/styles/index.css" />
-    <script src="./src/imprint.js" defer></script>
+    <script src="./src/utils/appshell.js" defer></script>
   </head>
 
   <body>
