--- a/team.html
+++ b/team.html
@@ -109,6 +109,7 @@
       }
     </script>
     <link rel="stylesheet" href="./src/assets/styles/index.css" />
+    <script src="./src/utils/appshell.js" defer></script>
     <script src="./src/team.js" defer></script>
   </head>
 
