--- a/team.html
+++ b/team.html
@@ -108,6 +108,12 @@
         "url": "https://sleak-mag.design"
       }
     </script>
+    <script>
+      document.write(
+        '<style>.team__image>img{opacity:0;}.team__text{opacity:0;}</style>',
+      );
+    </script>
+
     <link rel="stylesheet" href="./src/assets/styles/index.css" />
     <script src="./src/utils/appshell.js" defer></script>
     <script src="./src/team.js" defer></script>
