refactor: use english comments in styles & html/svg

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
       </header>
 
       <!--
-        Hints für Parcel, damit wir bei sichtbaren <a> Links saubere URLs ohne Endung benutzen können, Parcel die HTMLs aber trotzdem einbindet
+        Hints for Parcel, so visible <a> links can use clean URLs without file
+        extension (/team), but Parcel still notices & bundles the HTML files
       -->
       <a style="display:none;" href="./team.html"></a>
       <a style="display:none;" href="./print.html"></a>
