fix: rename article 04 to be in line with print version

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
             </a>
           </li>
           <li>
-            <a href="#kunst-design">
+            <a href="#design-kunst">
               <span>04</span>
-              <span class="selection-menu__title">Kunst | Design</span>
+              <span class="selection-menu__title">Design| Kunst</span>
             </a>
           </li>
           <li>
@@ -297,7 +297,7 @@
         data-loaded="false"
         id="film-ab-bheaven"
       ></article>
-      <article class="article" data-loaded="false" id="kunst-design"></article>
+      <article class="article" data-loaded="false" id="design-kunst"></article>
       <article class="article" data-loaded="false" id="back-to-print"></article>
       <article
         class="article"
