chore: update dependencies

--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
       sizes="16x16"
       href="./src/assets/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="./src/assets/manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="msapplication-TileColor" content="#e41a1f" />
     <meta
