--- a/print.html
+++ b/print.html
@@ -76,7 +76,7 @@
       sizes="16x16"
       href="./src/assets/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="./src/assets/manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <meta
       name="description"
       content="Entdecke die edle Printausgabe Design Magazins! sleak, zum Anfassen."
