--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       sizes="16x16"
       href="./src/assets/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="./src/assets/manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <link rel="canonical" href="https://sleak-mag.design" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="msapplication-TileColor" content="#e41a1f" />
