--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
       sizes="16x16"
       href="./src/assets/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="./src/assets/manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <meta
       name="description"
       content="Lerne Team sleak kennen! Wir sind die Studierenden, die sleak konzipiert, verfasst und herausgegeben haben!"
