chore: switch domain name to dmp-magazin.de
BREAKING: magazine now accessible on dmp-magazin.de
sleak-mag.design will redirect

--- a/print.html
+++ b/print.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Printausgabe | sleak</title>
-    <link rel="canonical" href="https://sleak-mag.design/print" />
+    <link rel="canonical" href="https://dmp-magazin.de/print" />
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
@@ -90,13 +90,13 @@
     <meta name="theme-color" content="#e41a1f" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://sleak-mag.design/print" />
+    <meta property="og:url" content="https://dmp-magazin.de/print" />
     <meta property="og:title" content="Printausgabe | sleak" />
     <meta
       property="og:description"
       content="Entdecke die edle Printausgabe des Design Magazins! sleak, zum Anfassen."
     />
-    <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
+    <meta property="og:image" content="https://dmp-magazin.de/sleak.jpg" />
     <meta property="og:image:width" content="1900" />
     <meta property="og:image:height" content="1031" />
     <script type="application/ld+json">
@@ -105,7 +105,7 @@
         "@type": "WebSite",
         "name": "sleak",
         "alternateName": "sleak – design magazine",
-        "url": "https://sleak-mag.design"
+        "url": "https://dmp-magazin.de"
       }
     </script>
     <link rel="stylesheet" href="./src/assets/styles/index.css" />
@@ -254,8 +254,8 @@
         <p class="article__text"
           >Um ein Exemplar zu bestellen, schreibe einfach eine kurze Mail an
           <a
-            href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#114;&#x65;&#x64;&#97;&#x6b;&#116;&#x69;&#x6f;&#110;&#x40;&#115;&#108;&#101;&#97;&#107;&#45;&#x6d;&#x61;&#103;&#46;&#x64;&#x65;&#x73;&#105;&#x67;&#110;?subject=Bestellung%20sleak-Magazin&amp;body=Hallo%20Team%20sleak%2C%0A%0Aich%20w%C3%BCrde%20gerne%20eine%20Print%2DVersion%20des%20Magazins%20bestellen%2E%0ABitte%20sendet%20mir%20Informationen%20zu%20Kosten%2C%20Lieferung%20%26%20Zahlungsmethoden%20zu%2E%0A%0AViele%20Gr%C3%BC%C3%9Fe%0A%0A"
-            >&#114;&#101;&#x64;&#97;&#x6b;&#x74;&#105;&#x6f;&#x6e;&#64;&#115;&#x6c;&#101;&#97;&#x6b;&#x2d;&#109;&#97;&#x67;&#x2e;&#100;&#101;&#115;&#105;&#103;&#x6e;</a
+            href="&#x6D;&#x61;&#x69;&#x6C;&#x74;&#x6F;&#x3A;&#x72;&#x65;&#x64;&#x61;&#x6B;&#x74;&#x69;&#x6F;&#x6E;&#x40;&#x64;&#x6D;&#x70;&#x2D;&#x6D;&#x61;&#x67;&#x61;&#x7A;&#x69;&#x6E;&#x2E;&#x64;&#x65;?subject=Bestellung%20sleak-Magazin&amp;body=Hallo%20Team%20sleak%2C%0A%0Aich%20w%C3%BCrde%20gerne%20eine%20Print%2DVersion%20des%20Magazins%20bestellen%2E%0ABitte%20sendet%20mir%20Informationen%20zu%20Kosten%2C%20Lieferung%20%26%20Zahlungsmethoden%20zu%2E%0A%0AViele%20Gr%C3%BC%C3%9Fe%0A%0A"
+            >&#x72;&#x65;&#x64;&#x61;&#x6B;&#x74;&#x69;&#x6F;&#x6E;&#x40;&#x64;&#x6D;&#x70;&#x2D;&#x6D;&#x61;&#x67;&#x61;&#x7A;&#x69;&#x6E;&#x2E;&#x64;&#x65;</a
           >
           <span class="article__text--highlighted-inline no-wrap"
             >– we'll get in touch!</span
