--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       href="./src/assets/icons/favicon-16x16.png"
     />
     <link rel="manifest" href="./manifest.webmanifest" />
-    <link rel="canonical" href="https://sleak-mag.design" />
+    <link rel="canonical" href="https://dmp-magazin.de" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="msapplication-TileColor" content="#e41a1f" />
     <meta
@@ -90,13 +90,13 @@
     <meta name="theme-color" content="#e41a1f" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://sleak-mag.design" />
+    <meta property="og:url" content="https://dmp-magazin.de" />
     <meta property="og:title" content="sleak – design magazine" />
     <meta
       property="og:description"
       content="Artikel rund um Design in Deutschland – für Design-Interessierte und Alle, die es noch werden wollen. Herausgegeben von Studierenden der HS Bremerhaven."
     />
-    <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
+    <meta property="og:image" content="https://dmp-magazin.de/sleak.jpg" />
     <meta property="og:image:width" content="1900" />
     <meta property="og:image:height" content="1031" />
     <script type="application/ld+json">
@@ -105,7 +105,7 @@
         "@type": "WebSite",
         "name": "sleak",
         "alternateName": "sleak – design magazine",
-        "url": "https://sleak-mag.design"
+        "url": "https://dmp-magazin.de"
       }
     </script>
     <link rel="stylesheet" href="./src/assets/styles/index.css" />
