--- a/rechtliches.html
+++ b/rechtliches.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Rechtliches | sleak</title>
-    <link rel="canonical" href="https://sleak-mag.design/rechtliches" />
+    <link rel="canonical" href="https://dmp-magazin.de/rechtliches" />
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
@@ -90,13 +90,13 @@
     <meta name="theme-color" content="#e41a1f" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://sleak-mag.design" />
+    <meta property="og:url" content="https://dmp-magazin.de" />
     <meta property="og:title" content="Rechtliches | sleak" />
     <meta
       property="og:description"
       content="Informationen zum Impressum und den Datenschutzvorkehrungen von sleak – design magazine."
     />
-    <meta property="og:image" content="https://sleak-mag.design/sleak.jpg" />
+    <meta property="og:image" content="https://dmp-magazin.de/sleak.jpg" />
     <meta property="og:image:width" content="1900" />
     <meta property="og:image:height" content="1031" />
     <script type="application/ld+json">
@@ -105,7 +105,7 @@
         "@type": "WebSite",
         "name": "sleak",
         "alternateName": "sleak – design magazine",
-        "url": "https://sleak-mag.design"
+        "url": "https://dmp-magazin.de"
       }
     </script>
     <link rel="stylesheet" href="./src/assets/styles/index.css" />
