--- a/404.html
+++ b/404.html
@@ -92,7 +92,7 @@
   </head>
 
   <body>
-    <a href="./" aria-label="Zur Startseite">
+    <a href="./index.html" aria-label="Zur Startseite">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 262.27 72.48"
@@ -117,6 +117,7 @@
       </svg>
     </a>
 
-    <h1>404 - Seite nicht gefunden</h1> <a href="./">Zur Startseite</a>
+    <h1>404 - Seite nicht gefunden</h1>
+    <a href="./index.html">Zur Startseite</a>
   </body>
 </html>
