--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
       <!--
         Hints for Parcel, so visible <a> links can use clean URLs without file
-        extension (/team), but Parcel still notices & bundles the HTML files
+        extension (/team.html), but Parcel still notices & bundles the HTML files
       -->
       <a style="display:none;" href="./team.html"></a>
       <a style="display:none;" href="./print.html"></a>
@@ -147,22 +147,24 @@
       <nav class="menu__nav">
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a href="./" class="menu__item js-menu__item">Magazin</a>
+            <a href="./index.html" class="menu__item js-menu__item">Magazin</a>
           </li>
           <li class="menu__list-item">
-            <a href="./team" class="menu__item js-menu__item">Team</a>
+            <a href="./team.html" class="menu__item js-menu__item">Team</a>
           </li>
           <li class="menu__list-item">
-            <a href="./print" class="menu__item js-menu__item">Printausgabe</a>
+            <a href="./print.html" class="menu__item js-menu__item"
+              >Printausgabe</a
+            >
           </li>
           <li class="menu__list-item">
-            <a href="./rechtliches" class="menu__item js-menu__item"
+            <a href="./rechtliches.html" class="menu__item js-menu__item"
               >Rechtliches</a
             >
           </li>
         </ul>
       </nav>
-      <a href="/#" class="menu__item menu__item--logo js-menu__item">
+      <a href="./index.html#" class="menu__item menu__item--logo js-menu__item">
         <img
           class="menu__image"
           src="./src/assets/images/sleak-logo.svg"
@@ -326,7 +328,7 @@
         <div>
           <p class="article__text article__text--highlighted">
             Danke fürs Lesen. Wusstest du, das sleak auch als
-            <a href="./print">edle Printausgabe</a> erschienen ist?
+            <a href="./print.html">edle Printausgabe</a> erschienen ist?
           </p>
         </div>
         <a href="#" class="footer__link" aria-label="Zurück zum Start scrollen">
