--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Team | sleak</title>
-    <link rel="canonical" href="https://dmp-magazin.de/team" />
+    <link rel="canonical" href="https://dmp-magazin.de/team.html" />
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
@@ -90,7 +90,7 @@
     <meta name="theme-color" content="#e41a1f" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://dmp-magazin.de/team" />
+    <meta property="og:url" content="https://dmp-magazin.de/team.html" />
     <meta property="og:title" content="Team | sleak" />
     <meta
       property="og:description"
@@ -132,22 +132,24 @@
       <nav class="menu__nav">
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a href="./" class="menu__item js-menu__item">Magazin</a>
+            <a href="./index.html" class="menu__item js-menu__item">Magazin</a>
           </li>
           <li class="menu__list-item">
-            <a href="./team" class="menu__item js-menu__item">Team</a>
+            <a href="./team.html" class="menu__item js-menu__item">Team</a>
           </li>
           <li class="menu__list-item">
-            <a href="./print" class="menu__item js-menu__item">Printausgabe</a>
+            <a href="./print.html" class="menu__item js-menu__item"
+              >Printausgabe</a
+            >
           </li>
           <li class="menu__list-item">
-            <a href="./rechtliches" class="menu__item js-menu__item"
+            <a href="./rechtliches.html" class="menu__item js-menu__item"
               >Rechtliches</a
             >
           </li>
         </ul>
       </nav>
-      <a href="/#" class="menu__item menu__item--logo js-menu__item">
+      <a href="./index.html#" class="menu__item menu__item--logo js-menu__item">
         <img
           class="menu__image"
           src="./src/assets/images/sleak-logo.svg"
